--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: ????
+  Changes:
+    - Removed testing code and unused files
+---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: 2024-09-04
   Features:
