--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,10 @@
 ---------------------------------------------------------------------------------------------------
-Version: 0.1.1
+Version: 0.1.2
 Date: ????
+  Changes:
+---------------------------------------------------------------------------------------------------
+Version: 0.1.1
+Date: 2024-09-09
   Modding:
     - Added pymods compatability (you're welcome, Goats)
   Changes:
